--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>MalubyRose</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -17,7 +20,15 @@
                 <ul>
                     <li><a href="">Contact Us</a></li>
                     <li><a href=""></a>Physicians</li>
-                    <li><a href=""></a>Services</li>
+                    <li>< href="">
+                        <select name="Services" id="">
+                            <option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+                        </select>
+                    </li>
                     <span>></span>
                 </ul>
             </div>
