home page finished

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     <li><a href="">Physicians</a></li>
                     <li>
                         <select>
-                            <option value="">Services<a href=""></a></option>
-                            <option value=""><a href=""></a></option>
-                            <option value=""><a href=""></a></option>
-                            <option value=""><a href=""></a></option>
-                            <option value=""><a href=""></a></option>
+                            <option disabled selected>Services<a href=""></a></option>
+                            <option><a href=""></a></option>
+                            <option><a href=""></a></option>
+                            <option><a href=""></a></option>
+                            <option><a href=""></a></option>
                         </select>
                     </li>
                 </ul>
@@ -92,7 +92,7 @@
         <div class="join-the-family">
             <div class="register-wrapper">
                 <h3>Join the Family</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, fuga blanditiis. Asperiores quibusdam quae blanditiis commodi dicta consequuntur sit possimus eligendi maiores placeat eveniet necessitatibus porro modi, unde autem minus totam eaque laboriosam molestiae qui?</p>
+                <p>When you need medical assistance you know where to turn to. With our experience doctors that diagnose and treat thousands of patients each year, we are capable of handling any illness or injury that you may stuble on. We enure to keep up to date with every treatment and medicine that can be used to treat you or your families illness.</p>
                 <button>Register</button>
             </div>
             <div class="image-wrapper">
@@ -107,19 +107,25 @@
 ================================================================== -->
 
     <section>
-        <h2 class="spec">Specialties</h2>
-        <div class="bubble-section-container">
-            <div class="text-bubble">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsa modi nostrum quisquam ullam. Praesentium eius ex possimus libero est esse cumque odit quasi iure similique! Iste expedita dolore nihil, deserunt distinctio repudiandae ex repellendus?</p>
-            </div>
-            <div class="text-bubble">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsa modi nostrum quisquam ullam. Praesentium eius ex possimus libero est esse cumque odit quasi iure similique! Iste expedita dolore nihil, deserunt distinctio repudiandae ex repellendus?</p>
-            </div>
-            <div class="text-bubble">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsa modi nostrum quisquam ullam. Praesentium eius ex possimus libero est esse cumque odit quasi iure similique! Iste expedita dolore nihil, deserunt distinctio repudiandae ex repellendus?</p>
-            </div>
-            <div class="text-bubble">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsa modi nostrum quisquam ullam. Praesentium eius ex possimus libero est esse cumque odit quasi iure similique! Iste expedita dolore nihil, deserunt distinctio repudiandae ex repellendus?</p>
+        <div class="specialties-container">
+            <h1 class="spec">Specialties</h1>
+            <div class="bubble-section-container">
+                <div class="text-bubble">
+                    <h2>Allergy, Asthma & Immunology</h2>
+                    <p>Specialized care through testing and treatment of allergies and asthma in pediatric and adult patients. Our providers have training and special practice interests in allergic rhinitis (nasal allergies), pediatric asthma, food allergies and eczema.</p>
+                </div>
+                <div class="text-bubble">
+                    <h2>Dermatology</h2>
+                    <p>Comprehensive dermatologic care for all ages (including pediatric dermatology), skin types, and skin conditions, including: acne, acne scarring, rosacea, psoriasis, moles, warts, melanoma, skin cancer, skin cancer screenings, and more. Dermatology.</p>
+                </div>
+                <div class="text-bubble">
+                    <h2>Obstetric and Gynecology</h2>
+                    <p>Treatmen for the diseases and care of the female reproductive organs. We also specialize in the care of pregnancy and child birth. We pride ourselves in the health of our women and sufficent care durinfg pre-conception, pregnancy and imediatley after delivery</p>
+                </div>
+                <div class="text-bubble">
+                    <h2>Pediatric</h2>
+                    <p>offer a broad spectrum of well and sick care for infants, children and adolescents. Pediatric services include childhood and teen immunizations, monitoring child growth and development and treatment of childhood illnesses.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -132,36 +138,44 @@
             <h2>Stay Informed to Stay Healthy</h2>
             <div class="carousel-wrapper">
                 <div class="news">
-                    <img src="images/" alt="News image">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia facilis officiis, illum rerum quae fugiat enim doloribus minus corporis dolorem aperiam molestias mollitia ut impedit maxime, aspernatur ab nemo? Asperiores quam nihil sequi ullam praesentium.</p>
+                    <img src="images/news_one.jpg" alt="News image">
+                    <h3>Health Ministry launches School Mental Health Literacy Programme</h3>
+                    <p>The Ministry of Health & Wellness, in collaboration with the Ministry of Education and Youth, earlier today launched the School Mental Health Literacy Programme. “Mental health challenges are now… <span href="">Read more</span></p>
                 </div>
                 <div class="news">
-                    <img src="images/" alt="news image">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vitae dignissimos in, ullam ab veritatis ducimus enim quasi, tempore sequi debitis commodi, praesentium quae explicabo saepe eos officia. Accusamus, nostrum corrupti dignissimos sapiente sint eaque.</p>
+                    <img src="images/news_two.jpeg" alt="news image">
+                    <h3>Tufton to chair PAHO Executive Committee for 2022-23</h3>
+                    <p>Jamaica has been appointed to the presidency of the Executive Committee of the Pan American Health Organisation (PAHO) for 2022-23. The Committee, which will be chaired by the island’s Minister of Health… <span href="">Read more</span></p>
                 </div>
                 <div class="news">
-                    <img src="images/" alt="news image">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, unde nostrum. Optio inventore aliquam tenetur, corporis non nemo repellat eos laudantium mollitia praesentium magnam esse sit? Eum deleniti ipsa eligendi reprehenderit dolorem. Harum, distinctio aliquam?</p>
+                    <img src="images/news_three.jpg" alt="news image">
+                    <h3>Health Ministry inks CODE CARE agreements with overseas entities</h3>
+                    <p>The Ministry of Health & Wellness has signed agreements with the University of Miami Health System in Florida and Hartford Healthcare in Connecticut to support the implementation of… <span href="">Read more</span></p>
                 </div>
                 <div class="news">
-                    <img src="images/" alt="news image">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, unde nostrum. Optio inventore aliquam tenetur, corporis non nemo repellat eos laudantium mollitia praesentium magnam esse sit? Eum deleniti ipsa eligendi reprehenderit dolorem. Harum, distinctio aliquam?</p>
+                    <img src="images/news_four.jpg" alt="news image">
+                    <h3>Health Ministry to discontinue daily COVID-19 updates</h3>
+                    <p>The Ministry of Health and Wellness wishes to advise the public of the discontinuation of the daily publication of the COVID-19 updates, effective Saturday, October 1, 2022. The updated numbers will instead be.... <span href="">Read more</span></p>
                 </div>
                 <div class="news">
-                    <img src="images/" alt="news image">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, unde nostrum. Optio inventore aliquam tenetur, corporis non nemo repellat eos laudantium mollitia praesentium magnam esse sit? Eum deleniti ipsa eligendi reprehenderit dolorem. Harum, distinctio aliquam?</p>
+                    <img src="images/news_five.jpg" alt="news image">
+                    <h3>Salty Jamaicans!</h3>
+                    <p>The average intake of salt in Jamaica is almost twice as high as the recommended level of intake, contributing to high blood pressure among members of the population while putting them at increased risk of heart disease and stroke. The… <span href="">Read more</span></p>
                 </div>
                 <div class="news">
-                    <img src="images/" alt="news image">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, unde nostrum. Optio inventore aliquam tenetur, corporis non nemo repellat eos laudantium mollitia praesentium magnam esse sit? Eum deleniti ipsa eligendi reprehenderit dolorem. Harum, distinctio aliquam?</p>
+                    <img src="images/news_six.jpg" alt="news image">
+                    <h3>Jamaica Moves Reloaded</h3>
+                    <p>The Ministry of Health & Wellness will this Thursday (August 25) resume face-to-face implementation of its flagship ‘Jamaica Moves’ campaign, at a launch event dubbed ‘Jamaica Moves Reloaded’, hosted to re-energise the public to… <span href="">Read more</span></p>
                 </div>
                 <div class="news">
-                    <img src="images/" alt="news image">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, unde nostrum. Optio inventore aliquam tenetur, corporis non nemo repellat eos laudantium mollitia praesentium magnam esse sit? Eum deleniti ipsa eligendi reprehenderit dolorem. Harum, distinctio aliquam?</p>
+                    <img src="images/news_seven.jpg" alt="news image">
+                    <h3>Second booster dose for vulnerable groups</h3>
+                    <p>Jamaica is now offering a second booster dose of the COVID-19 vaccines to healthcare workers, persons over 60 years old and members of the public with immunocompromising conditions. The decision follows…<span href="">Read more</span></p>
                 </div>
                 <div class="news">
-                    <img src="images/" alt="news image">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, unde nostrum. Optio inventore aliquam tenetur, corporis non nemo repellat eos laudantium mollitia praesentium magnam esse sit? Eum deleniti ipsa eligendi reprehenderit dolorem. Harum, distinctio aliquam?</p>
+                    <img src="images/news_eight.png" alt="news image">
+                    <h3>Vaccination Sites – August 13-14, 2022</h3>
+                    <p>The Ministry of Health & Wellness invites members of the public to attend a vaccination site on Saturday and Sunday, June 18-19, 2022 to receive their first, second or booster dose of the AstraZeneca, Pfizer, Sinopharm… <span href="">Read more</span></p>
                 </div>
             </div>
             <div class="slide-icons">
