Added contact Us page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="links-wrapper">
                 <ul>
                     <li>Home</li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="contact.html" target="_blank">Contact Us</a></li>
                     <li><a href="">Physicians</a></li>
                     <li>
                         <select>
@@ -48,7 +48,7 @@
                     <div>
                         <ul>
                             <li><a href="">Home</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="contact.html" target="_blank">Contact Us</a></li>
                             <li><a href="#">Physicians</a></li>
                             <li><a href="#">
                                 <select>
@@ -205,7 +205,7 @@
                 </div>
             </div>
             <div class="navi-links-wrapper">
-                <a href="">Contact Us</a>
+                <a href="contact.html" target="_blank">Contact Us</a>
                 <a href="">Physicians</a>
                 <a href="">Services</a>
                 <a href="">Appointment</a>
