color, finishing touches

--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,13 @@
     <nav>
         <div class="nav-container">
             <div class="logo-wrapper">
-                <img src="" alt="LOGO">
+                <div class="logo">
+                    <a href="index.html"><img  src="images/logo3.png" alt="MalubyRose Logo"></a>
+                </div>
             </div>
             <div class="links-wrapper">
                 <ul>
-                    <li>Home</li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a class="contact" href="contact.html">Contact Us</a></li>
                     <li><a href="">Physicians</a></li>
                     <li>
@@ -83,36 +85,46 @@
         <div class="contact-info-container">
             <div class="address-wrapper">
                 <p>MalubyRose Health Office</p>
-                <p>24<sup>th</sup> Soolins Street, Mandeville, Manchester </p>
+                <div class="address">
+                    <p>24<sup>th</sup> Soolins Street, Mandeville, Manchester </p>
+                </div>
             </div>
             <div class="numbers-wrapper">
                 <ul>
                     <li class="contact-list">
-                        <p>Dr. james (Gynecologist) <span class="bullets">&#9679;</span> +1 876 828-5643</p>
+                        <p>Dr. james (Gynecologist)</p>
+                        <div class="number"> + 1 876 828-5643</div> 
                     </li>
                     <li class="contact-list">
-                        <p>Dr. Sedine (Pediatrition) <span class="bullets">&#9679;</span> +1 876 828-5643</p>
+                        <p>Dr. Sedine (Pediatrition)</p>
+                        <div class="number"> + 1 876 828-5643</div> 
                     </li>
                     <li class="contact-list">
-                        <p>Dr. Carmen (Dermatologist) <span class="bullets">&#9679;</span> +1 876 828-5643</p>
+                        <p>Dr. Carmen (Dermatologist)</p>
+                        <div class="number"> + 1 876 828-5643</div> 
                     </li>
                     <li class="contact-list">
-                        <p>Dr. Brown (Gynecologist) <span class="bullets">&#9679;</span> +1 876 828-5643</p>
+                        <p>Dr. Brown (Gynecologist)</p>
+                        <div class="number"> + 1 876 828-5643</div>
                     </li>
                     <li class="contact-list">
-                        <p>Dr. Celice (Nurse) <span class="bullets">&#9679;</span> +1 876 828-5643</p>
+                        <p>Dr. Celice (Nurse)</p>
+                        <div class="number"> + 1 876 828-5643</div> 
                     </li>
                     <li class="contact-list">
-                        <p>Dr. Gordan (Nurse) <span class="bullets">&#9679;</span> +1 876 828-5643</p>
+                        <p>Dr. Gordan (Nurse)</p>
+                        <div class="number"> + 1 876 828-5643</div> 
                     </li>
                     <li class="contact-list">
-                        <p>Dr. Mernay (Nurse) <span class="bullets">&#9679;</span> +1 876 828-5643</p>
+                        <p>Dr. Mernay (Nurse)</p>
+                        <div class="number"> + 1 876 828-5643</div> 
                     </li>
                 </ul>
             </div>
         </div>
         <div class="main-info">
-            <p>Office Hours | Desk Number</p>
+            <p>Office Hours &nbsp;&nbsp;|&nbsp;&nbsp; <span>Desk Number</span></p>
+            <p>&nbsp;&nbsp;&nbsp;7:00 AM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+1 876 788-2114</p>
         </div>
     </section>
 
