--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <nav>
         <div class="nav-container">
             <div class="logo-wrapper">
-                <img src="" alt="LOGO">
+                <div class="logo">
+                    <a href="index.html"><img  src="images/logo3.png" alt="MalubyRose Logo"></a>
+                </div>
             </div>
             <div class="links-wrapper">
                 <ul>
-                    <li>Home</li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="contact.html" target="_blank">Contact Us</a></li>
                     <li><a href="">Physicians</a></li>
                     <li>
