--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Contact Us - MalubyRose</title>
     <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/90058b3df0.js" crossorigin="anonymous"></script>
@@ -23,14 +23,14 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a class="contact" href="contact.html">Contact Us</a></li>
-                    <li><a href="">Physicians</a></li>
+                    <li><a href="four_o_four.html">Physicians</a></li>
                     <li>
                         <select>
                             <option disabled selected>Services<a href=""></a></option>
-                            <option><a href=""></a></option>
-                            <option><a href=""></a></option>
-                            <option><a href=""></a></option>
-                            <option><a href=""></a></option>
+                            <option><a href="four_o_four.html"></a></option>
+                            <option><a href="four_o_four.html"></a></option>
+                            <option><a href="four_o_four.html"></a></option>
+                            <option><a href="four_o_four.html"></a></option>
                         </select>
                     </li>
                 </ul>
@@ -51,14 +51,14 @@
                         <ul>
                             <li><a href="">Home</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
-                            <li><a href="#">Physicians</a></li>
-                            <li><a href="#">
+                            <li><a href="four_o_four.html">Physicians</a></li>
+                            <li><a href="four_o_four.html">
                                 <select>
                                     <option value="">Services<a href=""></a></option>
-                                    <option value=""><a href=""></a></option>
-                                    <option value=""><a href=""></a></option>
-                                    <option value=""><a href=""></a></option>
-                                    <option value=""><a href=""></a></option>
+                                    <option value=""><a href="four_o_four.html"></a></option>
+                                    <option value=""><a href="four_o_four.html"></a></option>
+                                    <option value=""><a href="four_o_four.html"></a></option>
+                                    <option value=""><a href="four_o_four.html"></a></option>
                                 </select>
                             </a></li>
                         </ul>
@@ -136,24 +136,24 @@
         <div class="footer-container">
             <div class="socials-wrapper">
                 <div class="twitter-div">
-                    <a href=""><i class="fa-brands fa-twitter"></i> Follow us on Twitter</a>
+                    <a href="four_o_four.html"><i class="fa-brands fa-twitter"></i> Follow us on Twitter</a>
                 </div>
                 <div class="facebook-div">
-                    <a href=""><i class="fa-brands fa-facebook"></i> Friend us on Facebook</a>
+                    <a href="four_o_four.html"><i class="fa-brands fa-facebook"></i> Friend us on Facebook</a>
                 </div>
                 <div class="instagram-div">
-                    <a href=""><i class="fa-brands fa-instagram"></i> Follow us on Instagram</a>
+                    <a href="four_o_four.html"><i class="fa-brands fa-instagram"></i> Follow us on Instagram</a>
                 </div>
                 <div class="linkedin-div">
-                    <a href=""><i class="fa-brands fa-linkedin"></i> Follow us on Linkedin</a>
+                    <a href="four_o_four.html"><i class="fa-brands fa-linkedin"></i> Follow us on Linkedin</a>
                 </div>
             </div>
             <div class="navi-links-wrapper">
                 <a href="contact.html">Contact Us</a>
-                <a href="">Physicians</a>
-                <a href="">Services</a>
-                <a href="">Appointment</a>
-                <a href="">Register</a>
+                <a href="four_o_four.html">Physicians</a>
+                <a href="four_o_four.html">Services</a>
+                <a href="four_o_four.html">Appointment</a>
+                <a href="four_o_four.html">Register</a>
             </div>
         </div>
     </footer>    
