--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,12 @@
             </div>
             <div class="links-wrapper">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a class="contact" href="contact.html">Contact Us</a></li>
-                    <li><a href="four_o_four.html">Physicians</a></li>
+                    <li><a class="nav-links" href="index.html">Home</a></li>
+                    <li><a class="nav-links" href="contact.html" target="_blank">Contact Us</a></li>
+                    <li><a class="nav-links" href="four_o_four.html">Physicians</a></li>
                     <li>
-                        <select>
-                            <option disabled selected>Services<a href=""></a></option>
+                        <select class="nav-links">
+                            <option disabled selected>Services<a href="four_o_four.html"></a></option>
                             <option><a href="four_o_four.html"></a></option>
                             <option><a href="four_o_four.html"></a></option>
                             <option><a href="four_o_four.html"></a></option>
@@ -49,12 +49,12 @@
                 <div class="menu">
                     <div>
                         <ul>
-                            <li><a href="">Home</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="contact.html" target="_blank">Contact Us</a></li>
                             <li><a href="four_o_four.html">Physicians</a></li>
                             <li><a href="four_o_four.html">
                                 <select>
-                                    <option value="">Services<a href=""></a></option>
+                                    <option value="">Services<a href="four_o_four.html"></a></option>
                                     <option value=""><a href="four_o_four.html"></a></option>
                                     <option value=""><a href="four_o_four.html"></a></option>
                                     <option value=""><a href="four_o_four.html"></a></option>
@@ -68,13 +68,13 @@
         </div>
     </nav>
 
-    <div class="feedback-container">
-        <a>Feedback</a>
-    </div>
+    <!-- <div class="feedback-container">
+        <a href="feedback.html">Feedback</a>
+    </div> -->
 
     <section>
         <div class="contact-us-image-container">
-            <div class="image-wrapper">
+            <div class="image-wrap">
                 <img src="images/contact_image.jpg" alt="family image">
                 <h1>Contact Us</h1>
             </div>
@@ -152,7 +152,7 @@
                 <a href="contact.html">Contact Us</a>
                 <a href="four_o_four.html">Physicians</a>
                 <a href="four_o_four.html">Services</a>
-                <a href="four_o_four.html">Appointment</a>
+                <a href="appointment.html" target="_blank">Appointment</a>
                 <a href="four_o_four.html">Register</a>
             </div>
         </div>
