--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             </div>
             <div class="links-wrapper">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html" target="_blank">Contact Us</a></li>
-                    <li><a href="four_o_four.html">Physicians</a></li>
+                    <li><a class="nav-links" href="index.html">Home</a></li>
+                    <li><a class="nav-links" href="contact.html" target="_blank">Contact Us</a></li>
+                    <li><a class="nav-links" href="four_o_four.html">Physicians</a></li>
                     <li>
-                        <select>
+                        <select class="nav-links">
                             <option disabled selected>Services<a href="four_o_four.html"></a></option>
                             <option><a href="four_o_four.html"></a></option>
                             <option><a href="four_o_four.html"></a></option>
@@ -52,9 +52,9 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="contact.html" target="_blank">Contact Us</a></li>
                             <li><a href="four_o_four.html">Physicians</a></li>
-                            <li><a href="four_o_four.html">
+                            <li><a href="#">
                                 <select>
-                                    <option value="">Services<a href="four_o_four.html"></a></option>
+                                    <option value="">Services<a href="#"></a></option>
                                     <option value=""><a href="four_o_four.html"></a></option>
                                     <option value=""><a href="four_o_four.html"></a></option>
                                     <option value=""><a href="four_o_four.html"></a></option>
@@ -68,9 +68,9 @@
         </div>
     </nav>
 
-    <div class="feedback-container">
+    <!-- <div class="feedback-container">
         <a href="">Feedback</a>
-    </div>
+    </div> -->
 
 <!-- ==============================================================
                                 Top Bar
@@ -81,8 +81,12 @@
             <h1>Your Health is Our Responsibility !</h1>
         </div>
         <div class="right-wrapper">
-            <button>Appointment</button>
-            <button>Log In</button>
+            <button>
+                <a class="appoint-but" href="appointment.html" target="_blank">Appointment<a>
+            </button>
+            <button>
+                <a class="log-in-but" href="four_o_four.html">Log In</a>
+            </button>
         </div>
     </div>
 
@@ -95,11 +99,13 @@
             <div class="register-wrapper">
                 <h3>Join the Family</h3>
                 <p>When you need medical assistance you know where to turn to. With our experience doctors that diagnose and treat thousands of patients each year, we are capable of handling any illness or injury that you may stuble on. We enure to keep up to date with every treatment and medicine that can be used to treat you or your families illness.</p>
-                <button>Register</button>
+                <button><a href="four_o_four.html">Register</a></button>
             </div>
             <div class="image-wrapper">
                 <img class="register-image" src="images/newborn.jpg" alt="family photo">
-                <div class="img-gradient"></div>
+                <div class="img-gradient">
+                    
+                </div>
             </div>
         </div>
     </section>
@@ -210,7 +216,7 @@
                 <a href="contact.html" target="_blank">Contact Us</a>
                 <a href="four_o_four.html">Physicians</a>
                 <a href="four_o_four.html">Services</a>
-                <a href="four_o_four.html">Appointment</a>
+                <a href="appointment.html" target="_blank">Appointment</a>
                 <a href="four_o_four.html">Register</a>
             </div>
         </div>
