--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Contact Us - MalubyRose</title>
+    <link rel="shortcut icon" type="image/png" href="images/icon2.png">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/90058b3df0.js" crossorigin="anonymous"></script>
 </head>
